--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
     </div>
 
     <audio id="bgMusic" loop>
-      <source src="src/bg-sound.mp3" type="audio/mpeg" />
+      <source src="bg-sound.mp3" type="audio/mpeg" />
       Your browser does not support the audio element.
     </audio>
 
