--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ucapan Ulang Tahun</title>
+    <title>Birthday Card</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://cdn.jsdelivr.net/npm/daisyui@4.10.2/dist/full.css" rel="stylesheet" type="text/css" />
     <style>
@@ -118,7 +118,7 @@
       <!-- Greeting Text -->
       <div id="greetings" class="mt-8 space-y-4 hidden">
         <p id="line1" class="text-3xl font-bold opacity-0">Selamat Ulang Tahun 🎂</p>
-        <p id="line2" class="text-4xl font-bold opacity-0">Mailani Ulfah</p>
+        <p id="line2" class="text-4xl font-bold opacity-0">Rifqi Ananda</p>
         <p id="line3" class="text-xl opacity-0">Semoga panjang umur, sehat selalu, dan penuh keberkahan 🤲</p>
       </div>
 
@@ -212,7 +212,7 @@
           wishForm.classList.add("hidden");
           finalScene.classList.remove("hidden");
 
-          typeText(finalLine, "Sekali lagi, Selamat Ulang Tahun Ulfah, Barakallah fi Umrik 🎉", 50, () => {
+          typeText(finalLine, "Sekali lagi, Selamat Ulang Tahun Kiki, Barakallah fi Umrik 🎉", 50, () => {
             setTimeout(() => {
               const extra = "\n\nAamiin Ya Rabbal ‘Alamiin 🤲\nSemoga semua harapanmu terkabul, dan ini juga do’a dariku:\nSemoga kamu selalu dikelilingi orang baik, makin bijaksana, dan bahagia dunia akhirat 🫶";
               const combinedWish = `${wish}${extra}`;
