--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
           typeText(finalLine, "Sekali lagi, Selamat Ulang Tahun Kiki, Barakallah fi Umrik 🎉", 50, () => {
             setTimeout(() => {
-              const extra = "\n\nAamiin Ya Rabbal ‘Alamiin 🤲\nSemoga semua harapanmu terkabul, dan ini juga do’a dariku:\nSemoga kamu selalu dikelilingi orang baik, makin bijaksana, dan bahagia dunia akhirat 🫶";
+              const extra = "\n\nAamiin Ya Rabbal ‘Alamiin 🤲\nSemoga semua harapanmu terkabul, dan ini juga do’a dariku:\nSemoga kamu selalu dikelilingi orang baik, makin bijaksana, dan bahagia dunia akhirat";
               const combinedWish = `${wish}${extra}`;
               typeText(finalWish, combinedWish, 40);
             }, 1000);
