--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
       <!-- Greeting Text -->
       <div id="greetings" class="mt-8 space-y-4 hidden">
         <p id="line1" class="text-3xl font-bold opacity-0">Selamat Ulang Tahun 🎂</p>
-        <p id="line2" class="text-4xl font-bold opacity-0">Rifqi Ananda</p>
+        <p id="line2" class="text-4xl font-bold opacity-0">Aditya Aulia Rahman</p>
         <p id="line3" class="text-xl opacity-0">Semoga panjang umur, sehat selalu, dan penuh keberkahan 🤲</p>
       </div>
 
@@ -212,7 +212,7 @@
           wishForm.classList.add("hidden");
           finalScene.classList.remove("hidden");
 
-          typeText(finalLine, "Sekali lagi, Selamat Ulang Tahun Kiki, Barakallah fi Umrik 🎉", 50, () => {
+          typeText(finalLine, "Sekali lagi, Selamat Ulang Tahun Adit, Barakallah fi Umrik 🎉", 50, () => {
             setTimeout(() => {
               const extra = "\n\nAamiin Ya Rabbal ‘Alamiin 🤲\nSemoga semua harapanmu terkabul, dan ini juga do’a dariku:\nSemoga kamu selalu dikelilingi orang baik, makin bijaksana, dan bahagia dunia akhirat";
               const combinedWish = `${wish}${extra}`;
